--- a/INVENTORY-SERVICE/src/main/resources/application.properties
+++ b/INVENTORY-SERVICE/src/main/resources/application.properties
@@ -3,8 +3,10 @@ server.port=8084
 
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
-eureka.instance.hostname=localhost
+eureka.client.service-url.defaultZone=http://35.154.182.218:8761/eureka/
+#eureka.instance.hostname=INVENTORY-SERVICE
+eureka.instance.prefer-ip-address=true
+
 
 spring.datasource.url=jdbc:postgresql://ep-bitter-darkness-a122sbpg-pooler.ap-southeast-1.aws.neon.tech:5432/INVENTORY_SERVICE?sslmode=require
 spring.datasource.username=neondb_owner
