Code push for inventory issue fix along with restaurant and cutsomer add and get

--- a/INVENTORY-SERVICE/src/main/resources/application.properties
+++ b/INVENTORY-SERVICE/src/main/resources/application.properties
@@ -19,3 +19,7 @@ spring.jpa.show-sql=true
 
 
 inventory.file.upload-dir=C:/InventoryUploads
+
+spring.servlet.multipart.max-file-size=50MB
+spring.servlet.multipart.max-request-size=50MB
+
