--- a/AUTH-SERVICE/src/main/resources/application.properties
+++ b/AUTH-SERVICE/src/main/resources/application.properties
@@ -16,3 +16,7 @@ eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
 eureka.client.service-url.defaultZone=http://35.154.182.218:8761/eureka/
 eureka.instance.prefer-ip-address=true
+
+
+spring.servlet.multipart.max-file-size=50MB
+spring.servlet.multipart.max-request-size=50MB
