Code push for Image upload and fetch

--- a/EUREKA-SERVER/src/main/resources/application.properties
+++ b/EUREKA-SERVER/src/main/resources/application.properties
@@ -1,10 +1,12 @@
-spring.application.name=EUREKA-SERVER
-server.port=8761
-
-#eureka.instance.hostname=15.206.142.20
-eureka.instance.hostname=35.154.182.218
-
-eureka.client.register-with-eureka=false
-eureka.client.fetch-registry=false
-eureka.client.service-url.defaultZone=http://35.154.182.218:8761/eureka/
-
+#spring.application.name=EUREKA-SERVER
+#server.port=8761
+#
+##eureka.instance.hostname=15.206.142.20
+#eureka.instance.hostname=35.154.182.218
+#
+#eureka.client.register-with-eureka=false
+#eureka.client.fetch-registry=false
+#eureka.client.service-url.defaultZone=http://35.154.182.218:8761/eureka/
+#
+spring.profiles.active=dev
+#spring.profiles.active=test
