--- a/AUTH-SERVICE/src/main/resources/application.properties
+++ b/AUTH-SERVICE/src/main/resources/application.properties
@@ -1,22 +1,27 @@
-spring.application.name=AUTH-SERVICE
-server.port=8081
-#spring.datasource.url=jdbc:postgresql://localhost:5432/auth_db?createDatabaseIfNotExist=true
-#spring.datasource.username=postgres
-#spring.datasource.password=root
-spring.datasource.url=jdbc:postgresql://ep-cool-star-a1f4ko82-pooler.ap-southeast-1.aws.neon.tech:5432/AUTH_SERVICE?sslmode=require
-spring.datasource.username=neondb_owner
-spring.datasource.password=npg_c1NYetKqXkd3
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.datasource.driver-class-name=org.postgresql.Driver
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
+#spring.application.name=AUTH-SERVICE
+#server.port=8081
+##spring.datasource.url=jdbc:postgresql://localhost:5432/auth_db?createDatabaseIfNotExist=true
+##spring.datasource.username=postgres
+##spring.datasource.password=root
+#spring.datasource.url=jdbc:postgresql://ep-cool-star-a1f4ko82-pooler.ap-southeast-1.aws.neon.tech:5432/AUTH_SERVICE?sslmode=require
+#spring.datasource.username=neondb_owner
+#spring.datasource.password=npg_c1NYetKqXkd3
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+#spring.datasource.driver-class-name=org.postgresql.Driver
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.show-sql=true
+#
+#
+#eureka.client.register-with-eureka=true
+#eureka.client.fetch-registry=true
+#eureka.client.service-url.defaultZone=http://35.154.182.218:8761/eureka/
+#eureka.instance.prefer-ip-address=true
+#
+#
+#spring.servlet.multipart.max-file-size=50MB
+#spring.servlet.multipart.max-request-size=50MB
 
 
-eureka.client.register-with-eureka=true
-eureka.client.fetch-registry=true
-eureka.client.service-url.defaultZone=http://35.154.182.218:8761/eureka/
-eureka.instance.prefer-ip-address=true
-
-
-spring.servlet.multipart.max-file-size=50MB
-spring.servlet.multipart.max-request-size=50MB
+spring.profiles.active=dev
+# OR
+#spring.profiles.active=test
