--- a/NOTIFICATION-SERVICE/src/main/resources/application.properties
+++ b/NOTIFICATION-SERVICE/src/main/resources/application.properties
@@ -1,30 +1,37 @@
-spring.application.name=NOTIFICATION-SERVICE
+#spring.application.name=NOTIFICATION-SERVICE
+#
+#
+#server.port=8082
+#spring.datasource.url=jdbc:postgresql://localhost:5432/auth_db?createDatabaseIfNotExist=true
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+#spring.datasource.username=postgres
+#spring.datasource.driver-class-name=org.postgresql.Driver
+#spring.datasource.password=root
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.show-sql=true
+#
+## Mail configuration - set these to your SMTP server credentials
+#spring.mail.host=smtp.gmail.com
+#spring.mail.port=587
+#spring.mail.username=cribcareinfo@gmail.com
+#spring.mail.password=wcuh mggi wvol hayp
+#spring.mail.properties.mail.smtp.auth=true
+#spring.mail.properties.mail.smtp.starttls.required=true
+#spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com
+#spring.mail.properties.mail.smtp.starttls.enable=true
+#
+## Token expiry in milliseconds (2 minutes = 120000)
+#notification.token.expiry-ms=120000
+#
+#
+#eureka.client.register-with-eureka=true
+#eureka.client.fetch-registry=true
+#eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+#eureka.instance.hostname=localhost
 
 
-server.port=8082
-spring.datasource.url=jdbc:postgresql://localhost:5432/auth_db?createDatabaseIfNotExist=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.datasource.username=postgres
-spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.password=root
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
+# Local
+spring.profiles.active=dev
 
-# Mail configuration - set these to your SMTP server credentials
-spring.mail.host=smtp.gmail.com
-spring.mail.port=587
-spring.mail.username=cribcareinfo@gmail.com
-spring.mail.password=wcuh mggi wvol hayp
-spring.mail.properties.mail.smtp.auth=true
-spring.mail.properties.mail.smtp.starttls.required=true
-spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com
-spring.mail.properties.mail.smtp.starttls.enable=true
-
-# Token expiry in milliseconds (2 minutes = 120000)
-notification.token.expiry-ms=120000
-
-
-eureka.client.register-with-eureka=true
-eureka.client.fetch-registry=true
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
-eureka.instance.hostname=localhost
+# AWS
+#spring.profiles.active=test
