code push for inventory service

--- a/INVENTORY-SERVICE/src/main/resources/application.properties
+++ b/INVENTORY-SERVICE/src/main/resources/application.properties
@@ -24,7 +24,7 @@
 #spring.servlet.multipart.max-request-size=50MB
 #
 # Local
-spring.profiles.active=dev
+#spring.profiles.active=dev
 
 # AWS
-#spring.profiles.active=test
+spring.profiles.active=test
