--- a/NOTIFICATION-SERVICE/src/main/resources/application.properties
+++ b/NOTIFICATION-SERVICE/src/main/resources/application.properties
@@ -31,7 +31,7 @@
 
 
 # Local
-spring.profiles.active=dev
+#spring.profiles.active=dev
 
 # AWS
-#spring.profiles.active=test
+spring.profiles.active=test
