--- a/ORDER-SERVICE/src/main/resources/application.properties
+++ b/ORDER-SERVICE/src/main/resources/application.properties
@@ -1,22 +1,1 @@
-spring.application.name=ORDER-SERVICE
-
-server.port=8085
-
-eureka.client.register-with-eureka=true
-eureka.client.fetch-registry=true
-eureka.client.service-url.defaultZone=http://35.154.182.218:8761/eureka/
-#eureka.instance.hostname=INVENTORY-SERVICE
-eureka.instance.prefer-ip-address=true
-
-
-spring.datasource.url=jdbc:postgresql://ep-bitter-darkness-a122sbpg-pooler.ap-southeast-1.aws.neon.tech:5432/ORDER_SERVICE?sslmode=require
-spring.datasource.username=neondb_owner
-spring.datasource.password=npg_lkA9tfR2eHQI
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.datasource.driver-class-name=org.postgresql.Driver
-
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-
-
-inventory.file.upload-dir=C:/InventoryUploads
+spring.profiles.active=dev
