--- a/API-GATEWAY/src/main/resources/application-dev.yml
+++ b/API-GATEWAY/src/main/resources/application-dev.yml
@@ -26,7 +26,7 @@ spring:
         - id: ORDER-SERVICE
           uri: lb://ORDER-SERVICE
           predicates:
-            - Path=/order/**
+            - Path=/orders/**
           filters:
             - name: AuthFilter
 
