--- a/NOTIFICATION-SERVICE/src/main/resources/application.properties
+++ b/NOTIFICATION-SERVICE/src/main/resources/application.properties
@@ -34,4 +34,7 @@
 #spring.profiles.active=dev
 
 # AWS
-spring.profiles.active=dev
+spring.profiles.active=test
+
+app.firebase-configuration-file=container.json
+
