--- a/AUTH-SERVICE/src/main/resources/application.properties
+++ b/AUTH-SERVICE/src/main/resources/application.properties
@@ -3,9 +3,9 @@
 ##spring.datasource.url=jdbc:postgresql://localhost:5432/auth_db?createDatabaseIfNotExist=true
 ##spring.datasource.username=postgres
 ##spring.datasource.password=root
-#spring.datasource.url=jdbc:postgresql://ep-cool-star-a1f4ko82-pooler.ap-southeast-1.aws.neon.tech:5432/AUTH_SERVICE?sslmode=require
+#spring.datasource.url=jdbc:postgresql://ep-lively-flower-a1q3da31-pooler.ap-southeast-1.aws.neon.tech:5432/AUTH_SERVICE?sslmode=require
 #spring.datasource.username=neondb_owner
-#spring.datasource.password=npg_c1NYetKqXkd3
+#spring.datasource.password= npg_8vKelSCbyG2c
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 #spring.datasource.driver-class-name=org.postgresql.Driver
 #spring.jpa.hibernate.ddl-auto=update
