--- a/INVENTORY-SERVICE/src/main/resources/application-dev.yml
+++ b/INVENTORY-SERVICE/src/main/resources/application-dev.yml
@@ -36,3 +36,10 @@ eureka:
 inventory:
   file:
     upload-dir: C:/InventoryUploads
+
+springdoc:
+  api-docs:
+    path: /v3/api-docs
+  swagger-ui:
+    path: /swagger-ui
+
