--- a/AUTH-SERVICE/src/main/resources/application-test.yml
+++ b/AUTH-SERVICE/src/main/resources/application-test.yml
@@ -32,3 +32,10 @@ eureka:
       defaultZone: http://35.154.182.218:8761/eureka/
   instance:
     prefer-ip-address: true
+
+springdoc:
+  enable: true
+  api-docs:
+    path: /api-docs
+  swagger-ui:
+    path: /swagger-ui.html
