update profile api fixed

--- a/AUTH-SERVICE/src/main/resources/application-dev.yml
+++ b/AUTH-SERVICE/src/main/resources/application-dev.yml
@@ -34,7 +34,6 @@ eureka:
     prefer-ip-address: true
 
 
-upload:
-  user:
-    profile:
-      path=C://uploads//sustajn//user//profile:
+image:
+  storage:
+    root-path: C:/uploads
