--- a/NOTIFICATION-SERVICE/src/main/resources/application.properties
+++ b/NOTIFICATION-SERVICE/src/main/resources/application.properties
@@ -34,7 +34,7 @@
 #spring.profiles.active=dev
 
 # AWS
-spring.profiles.active=test
+spring.profiles.active=dev
 
 app.firebase-configuration-file=container.json
 
