--- a/API-GATEWAY/src/main/resources/application-test.yml
+++ b/API-GATEWAY/src/main/resources/application-test.yml
@@ -21,7 +21,12 @@ spring:
           uri: lb://NOTIFICATION-SERVICE
           predicates:
             - Path=/notification/**
-
+        - id: ORDER-SERVICE
+          uri: lb://ORDER-SERVICE
+          predicates:
+            - Path=/orders/**
+          filters:
+            - name: AuthFilter
         - id: INVENTORY-SERVICE
           uri: lb://INVENTORY-SERVICE
           predicates:
