--- a/NOTIFICATION-SERVICE/pom.xml
+++ b/NOTIFICATION-SERVICE/pom.xml
@@ -46,6 +46,16 @@
 			<scope>runtime</scope>
 		</dependency>
 
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-openfeign</artifactId>
+        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
